wallet_core/wallet_common/wallet_common_macros/tests/sentry_capture_error/fail_on_return_type.stderr
error[E0308]: mismatched types
 --> tests/sentry_capture_error/fail_on_return_type.rs:5:5
  |
5 |     42
  |     ^^ expected `Result<_, _>`, found integer
  |
  = note: expected enum `Result<_, _>`
             found type `{integer}`
help: try wrapping the expression in a variant of `Result`
  |
5 |     Ok(42)
  |     +++  +
5 |     Err(42)
  |     ++++  +

error[E0308]: mismatched types
 --> tests/sentry_capture_error/fail_on_return_type.rs:3:1
  |
3 | #[sentry_capture_error]
  | ^^^^^^^^^^^^^^^^^^^^^^^ expected `u8`, found `Result<_, _>`
4 | fn foo() -> u8 {
  |             -- expected `u8` because of return type
  |
  = note: expected type `u8`
             found enum `Result<_, _>`
  = note: this error originates in the attribute macro `sentry_capture_error` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Result::expect` to unwrap the `Result<_, _>` value, panicking if the value is a `Result::Err`
  |
3 | #[sentry_capture_error].expect("REASON")
  |                        +++++++++++++++++
